--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -36,6 +36,7 @@
             "authenticationType": "API_KEY",
             "apiKeyConfig": {
               "apiKeyExpirationDays": 30,
+              "apiKeyExpirationDate": "2022-10-21T19:43:55.873Z",
               "description": "api key description"
             }
           },
